# TinyCTA

./: .deepsource.toml  .editorconfig  .env  .gitignore  .pre-commit-config.yaml  .rhiza.env  .ruff.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  action.yml  copyright.txt  coverage.sh  data.csv  mkdocs.yml  optimizer.md  pyproject.toml  pytest.ini  qodana.yaml  renovate.json  ruff.toml  taskfile.yml
.claude/: analysis.md  plan.md
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODE_OF_CONDUCT.md  dependabot.yml  pypi.yml  renovate.json  template.yml  tests.yml
.github/actions/setup-project/: action.yml
.github/rhiza/: template.yml
.github/scripts/: post-release.sh  release.sh  setup_project.sh  sync.sh
.github/scripts/customisations/: build-extras.sh  post-release.sh
.github/workflow/: release.yml
.github/workflows/: book.yml  ci-doctor.md  ci.yml  codeql.yml  copilot-setup-steps.yml  daily-repo-status.md  deptry.yml  devcontainer.yml  issue-triage.md  marimo.yml  pre-commit.yml  pypi.yml  release.yml  renovate_rhiza_sync.yml  rhiza_benchmarks.yml  rhiza_book.yml  rhiza_ci.yml  rhiza_codeql.yml  rhiza_dep_compat_test.yml  rhiza_deptry.yml  rhiza_devcontainer.yml  rhiza_docker.yml  rhiza_gh-aw-validate.yml  rhiza_license.yml  rhiza_marimo.yml  rhiza_pip_audit.yml  rhiza_pre-commit.yml  rhiza_quality.yml  rhiza_release.yml  rhiza_scorecard.yml  rhiza_security.yml  rhiza_semgrep.yml  rhiza_sync.yml  rhiza_typecheck.yml  rhiza_validate.yml  sync.yml  tests.yml  update.yml
.rhiza/: .env  .rhiza-version  Makefile.rhiza  history  rhiza.mk  template.yml
.rhiza/docs/: CONFIG.md  WORKFLOWS.md
.rhiza/make.d/: 10-custom-task.mk  book.mk  gh-aw.mk  test.mk
.rhiza/requirements/: docs.txt  tools.txt
.rhiza/tests/api/: test_makefile_targets.py  test_release_workflow.py  test_weekly_workflow.py
.rhiza/tests/integration/: test_docs_targets.py
.rhiza/tests/structure/: test_requirements.py  test_template_bundles.py
.rhiza/tests/sync/: test_rhiza_version.py
book/: README.md  _config.yml  book.mk
book/marimo/notebooks/: demo.py  rhiza.py
docs/: GH_AW.md  SECURITY.md  tutorial.md
docs/api/: config.md  engine.md  ewma.md  hyper.md  linalg.md  osc.md  signal.md  util.md
docs/development/: TESTS.md
issues/: 594.json  594.md
license/: LICENSE
pycta/: analysis.py  linalg.py  performance.py  portfolio.py
scripts/: check_test_layout.py
src/tests/: test_env.py  test_linalg.py  test_signal.py  test_version.py
src/tinycta/: __init__.py  _kernel.py  config.py  engine.py  ewm_cov.py  ewma.py  linalg.py  osc.py  signal.py  util.py
src/tinycta/hyper/: __init__.py  _setup.py  _study.py
taskfiles/: build.yml  docs.yml
tests/: __init__.py  conftest.py  test_analysis.py  test_cvxsimulator.py  test_experiment1.py  test_experiment2.py  test_experiment3.py  test_experiment4.py  test_experiment5.py  test_linalg.py  test_makefile.py  test_port.py  test_portfolio.py  test_pyproject_coverage.py  test_readme.py  test_readme_links.py  test_release_script.py  test_signal.py  test_taskfile.py  test_version.py  test_workflows.py  tests.mk
tests/fuzz/: fuzz_signal.py
tests/property/: test_properties.py
tests/test_rhiza/: __init__.py  conftest.py  helpers.py  test_cli_commands.py  test_makefile.py  test_makefile_api.py  test_rhiza_workflows.py
tests/test_tiny_cta/: conftest.py  test_config.py  test_engine.py  test_engine_mutation.py  test_ewm_cov.py  test_ewma.py  test_hyper_setup.py  test_hyper_study.py  test_linalg.py  test_osc.py  test_signal.py  test_util.py
tests/tinycta/: conftest.py  test__kernel.py  test_config.py  test_engine.py  test_engine_mutation.py  test_ewm_cov.py  test_signal.py  test_tutorial.py  test_util.py
tests/tinycta/hyper/: test__setup.py  test__study.py
tinycta/: __init__.py  drawdown.py  linalg.py  month.py  port.py  portfolio.py  signal.py  types.py
