[project]
name = "TinyCTA"
version = "0.12.5"
description = "..."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cvx-linalg>=0.5.1",
    "loguru>=0.7.3",
    "numpy>=2.0.0",
    "optuna>=4.8.0",
    "polars>=1.21.0",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
]
[project.urls]
Homepage = "https://github.com/tschm/tinycta"
Repository = "https://github.com/tschm/tinycta"

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "marimo==0.23.8",
    "plotly>=6.5",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-html>=4.0",
    "pytest-mock>=3.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.0",
    "hypothesis>=6.150.0",
    "pytest-benchmark>=5.2.3",
]
lint = [
    "pre-commit==4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinycta"]

[tool.deptry.package_module_name_map]
cvx-linalg = "cvx"
loguru = "loguru"
numpy = "numpy"
optuna = "optuna"
pandas-stubs = []
polars = "polars"
pre-commit = "pre_commit"
marimo = "marimo"
plotly = "plotly"
pydantic = "pydantic"
pyyaml = "yaml"

