[project]
name = "TinyCTA"
version = "0.13.2"
description = "A lightweight Python package for Commodity Trading Advisor (CTA) strategies"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cvx-linalg>=0.7.0",
    "numpy>=2.0.0",
    "polars>=1.21.0",
    "pydantic>=2.13.3",
]

[project.optional-dependencies]
# Hyperparameter-optimisation and notebook-experiment layer (tinycta.hyper).
# Install with: pip install tinycta[hyper]
hyper = [
    "jquantstats>=0.9.6",
    "loguru>=0.7.3",
    "optuna>=4.8.0",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/tschm/tinycta"
Repository = "https://github.com/tschm/tinycta"

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "marimo==0.23.9",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2",
]
# Mirrors the [project.optional-dependencies] hyper extra. The dev/CI environment
# needs it so the tinycta.hyper test suite can be collected and run; it is wired
# into the default sync via [tool.uv] default-groups below rather than an inline
# {include-group = ...} entry, which the legacy TOML parser used by mutmut cannot
# parse when mixed with string requirements in the same array.
hyper = [
    "jquantstats>=0.9.6",
    "loguru>=0.7.3",
    "optuna>=4.8.0",
    "pyyaml>=6.0.3",
]
test = [
    "pytest>=9.1.0",
    "pytest-cov>=6.0",
    "pytest-html>=4.0",
    "pytest-mock>=3.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.0",
    "hypothesis>=6.155.3",
    "pytest-benchmark>=5.2.3",
]
lint = [
    "pre-commit==4.6.0",
]

[tool.uv]
# Install both dev tooling and the hyper extra by default so `uv sync` provides
# everything needed to collect and run the full test suite (including tinycta.hyper).
default-groups = ["dev", "hyper"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinycta"]

[tool.deptry.package_module_name_map]
cvx-linalg = "cvx"
loguru = "loguru"
numpy = "numpy"
optuna = "optuna"
pandas-stubs = []
polars = "polars"
pre-commit = "pre_commit"
marimo = "marimo"
pydantic = "pydantic"
pyyaml = "yaml"

[tool.coverage.run]
branch = true
